2005-07-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify/Growl.pm: move event registration out of the constructor,
	for the purposes of speed.

2005-07-01  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Implement new function rejoin_text().
	* PkgVersion.pm: Improve error message when buildlock fails.

2005-06-30  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: We need to set %p in disable_bootstrap. This should fix
	the gettext bootstrapping bug.

2005-06-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Call prepare_percent_c whenever we assign %d and
	other path-related _expand keys

2005-06-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* VirtPackage.pm: If old XCode is not removed on upgrade to Tiger, a
	gcc3 (version 3.1) still remains. This causes Fink to add a virtual
	package which will overwrite a real gcc3.1 package, which confuses
	apt-get. Now virtual gcc packages will no longer overwrite real ones.

2005-06-29  David H. <dmalloc@users.sourceforge.net>

	* VirtPkg.pm: Added 10.3.9 SDK

2005-06-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Refactor the destdir re-setting code into a method, so
	the same effective code isn't in three places!
	* PkgVersion.pm: Make chown'ing the destdir conditional on not-bootstrap.

2005-06-20  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: If a candidate to satisfy a virtual dep has multiple siblings
	to be installed, that's just as good as ne sibling.
	* PkgVersion.pm: _ensure_splitoffs should be called on the parent, not the
	splitoff.

2005-06-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm: POD fixes.
	* Package.pm, PkgVersion.pm: Package DB no longer stores reference to
	package objects inside other packages, all references are now done using
	unique specifiers.

2005-06-19  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Sort dumpinfo -pall output.

2005-06-19  Daniel Macks  <dmacks@netspace.org>
