@@ -1,3 +1,8 @@
+2005-07-04  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* Package.pm: Er, make the info-list caching actually work. I'll be taking
+	that out soon anyhow.
+
 2005-07-02  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* Notify/Growl.pm: move event registration out of the constructor,
